...
        <TextView
            android:layout_width="19dp"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="Date"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/textdate"
            android:layout_width="146dp"
            android:layout_height="match_parent"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/calendarView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="Confirm" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="Profile" />

    </LinearLayout>

</LinearLayout>
