...
            android:layout_weight="1"
            android:padding="12dp"
            android:text="Name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/textname"
            android:layout_width="146dp"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:textSize="30sp"/>
...
            android:layout_weight="1"
            android:padding="12dp"
            android:text="Age"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/textage"
            android:layout_width="146dp"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:inputType="number"
            android:padding="12dp"
...
            android:layout_weight="1"
            android:padding="12dp"
            android:text="Email"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/textemail"
            android:layout_width="146dp"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:padding="12dp"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="Update" />


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
