...
                android:id="@+id/imageView1"
                android:layout_width="115dp"
                android:layout_height="64dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                app:srcCompat="@drawable/cwlink" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
...
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/kkkl"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="Detail"
...
